<resources>
    <string name="app_name">探险狗</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_tv_mark">第一青春读物</string>
    <string name="main_tv_look">推荐</string>
    <string name="main_tv_find">发现</string>
    <string name="main_tv_me">个人</string>
    <string name="frag_tv_attention">关注</string>
    <string name="frag_tv_recommend">推荐</string>
    <string name="title_activity_individual">IndividualActivity</string>
    <string name="individual_activity">我</string>
    <string name="individual_name">昵称</string>
    <string name="individual_message">我的消息</string>
    <string name="individual_follow">我的关注</string>
    <string name="individual_collection">我的收藏</string>
    <string name="individual_setup">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_follow">MyFollowActivity</string>
    <string name="title_activity_my_collection">MyCollectionActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="setup_good">赏个好评</string>
    <string name="setup_suggestion">意见反馈</string>
    <string name="setup_send">推荐给好友</string>
    <string name="setup_clean">缓存清理</string>
    <string name="setup_about">关于</string>
    <string name="setup_up">版本更新</string>
    <string name="title_activity_copyright">CopyrightActivity</string>
    <string name="title_activity_topic_list">专题列表</string>

    <string name="order_pay1">订购试用会员,您可享受免费观看内容并在当月享有观看任意一本付费漫画.</string>
    <string name="order_pay2">订购普通会员,您可享受免费观看内容及在当月享受观看任意五本付费漫画.</string>
    <string name="order_pay3">订购高级会员,您可享受免费观看内容并在当月享有观看任意二十本付费漫画.</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
</resources>
