<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bynnean.cartoon.ui.SetupActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_K"
        android:orientation="horizontal">
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/setup_back"
        android:background="@null"
        android:src="@drawable/ic_up_indicator"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_setup"
        android:textSize="22sp"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

    <!-- 赏个好评-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/setupGood"
        android:background="@color/bright_foreground_material_dark"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_message"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/setup_good"/>
    </LinearLayout>

    <!-- 意见反馈-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@color/bright_foreground_material_dark"-->
        <!--android:id="@+id/setupSuggestion"-->
        <!--android:orientation="horizontal">-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:src="@drawable/ic_me_item_follow"/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:textSize="20sp"-->
            <!--android:text="@string/setup_suggestion"/>-->

    <!--</LinearLayout>-->
    <!-- 推荐给好友-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bright_foreground_material_dark"
        android:id="@+id/setupSend"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_collection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/setup_send"/>

    </LinearLayout>
    <!-- 清理缓存-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bright_foreground_material_dark"
        android:id="@+id/setupClean"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_setup"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/setup_clean"/>

    </LinearLayout>
    <!-- 关于-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/setupAbout"
        android:background="@color/bright_foreground_material_dark"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_collection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/setup_about"/>

    </LinearLayout>
    <!-- 版本更新-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bright_foreground_material_dark"
        android:id="@+id/setupUp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_collection"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/setup_up"/>

    </LinearLayout>
</LinearLayout>
