<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bynnean.cartoon.fragment.IndividualFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/individual_activity"
        android:background="@color/color_K"
        android:textSize="22sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/background_floating_material_dark">

        <ImageView
            android:id="@+id/individual_head_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_personal_headportrait" />

        <TextView
            android:id="@+id/individual_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/individual_head_portrait"
            android:gravity="center"
            android:text="未登录"
            android:textColor="@color/background_floating_material_light"
            android:textSize="20sp" />
    </RelativeLayout>
    <!-- 我的消息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bright_foreground_material_dark"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/individual_message"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:src="@drawable/ic_listitem_next" />
    </LinearLayout>

    <!-- 我的关注-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:background="@color/bright_foreground_material_dark"
        android:id="@+id/IndividualItemFollow"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_follow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/individual_follow"
            android:textSize="20sp" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:src="@drawable/ic_listitem_next" />
    </LinearLayout>
    <!-- 我的收藏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:background="@color/bright_foreground_material_dark"
        android:id="@+id/IndividualItemCollection"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_collection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/individual_collection"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:src="@drawable/ic_listitem_next" />
    </LinearLayout>
    <!-- 设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:clickable="true"
        android:id="@+id/IndividualItemSetup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_me_item_setup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/individual_setup"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="240dp"
            android:src="@drawable/ic_listitem_next" />
    </LinearLayout>
</LinearLayout>
