<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/order_dialog_width"
    android:layout_height="@dimen/order_dialog_height"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="您将订购"
        android:textStyle="bold"
        android:textSize="@dimen/titel_ssmall_textsize"
        android:layout_marginTop="@dimen/main_item_padding"
        android:layout_marginLeft="@dimen/main_item_padding"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dip"
        android:background="#a0aaaaaa"
        android:layout_marginTop="@dimen/radious_dp"
     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="@dimen/main_item_padding"
        android:layout_marginRight="@dimen/main_item_padding"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/order_way1"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_groupitem_height"
            android:layout_weight="1"
            android:tag="@string/order_pay1"
            android:layout_gravity="center"
            android:background="@drawable/order_back_selector"
            android:gravity="center"
            android:text="试用会员\n(0.1元/月)"
            android:textColor="@drawable/text_color_selector"
            android:textSize="@dimen/ssmall_textsize"/>
        <View
            android:layout_width="@dimen/main_item_padding"
            android:layout_height="@dimen/main_groupitem_height"/>
            
        <TextView
            android:id="@+id/order_way2"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_groupitem_height"
            android:layout_weight="1"
            android:tag="@string/order_pay2"
            android:background="@drawable/order_back_selector"
            android:gravity="center"
            android:text="普通会员\n(5元/月)"
            android:textColor="@drawable/text_color_selector"
            android:textSize="@dimen/ssmall_textsize"
            />
        <View
            android:layout_width="@dimen/main_item_padding"
            android:layout_height="@dimen/main_groupitem_height"/>


        <TextView
            android:id="@+id/order_way3"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_groupitem_height"
            android:layout_weight="1"
            android:tag="@string/order_pay3"
            android:background="@drawable/order_back_selector"
            android:gravity="center"
            android:text="高级会员\n(20元/月)"
            android:textColor="@drawable/text_color_selector"
            android:textSize="@dimen/ssmall_textsize"
            />
        

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_des"
        android:textColor="@color/black"
        android:text="@string/order_pay1"
        android:textSize="@dimen/ssmall_textsize"
        android:layout_marginTop="@dimen/radious_dp"
        android:layout_marginLeft="@dimen/main_item_padding"
        android:layout_marginRight="@dimen/main_item_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_img_height"
        android:layout_marginRight="@dimen/main_img_height"
        android:layout_marginTop="@dimen/main_item_padding"
        android:orientation="horizontal"
        >
         
        <Button
            android:id="@+id/order_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:text="确认订购"
            android:textSize="@dimen/ssmall_textsize"
            android:background="#FFB90F"
            android:layout_weight="1"/>

        <View
            android:layout_width="18dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancle_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:text="取消"
            android:textSize="@dimen/ssmall_textsize"
            android:background="#8B8386"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    </LinearLayout>




</LinearLayout>